--- a/samples/Intentum.Sample.Blazor/Components/_Imports.razor
+++ b/samples/Intentum.Sample.Blazor/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Intentum.Sample.Blazor
+@using Intentum.Sample.Blazor.Api
 @using Intentum.Sample.Blazor.Components
 @using Intentum.Sample.Blazor.Components.Layout
 @using Intentum.Sample.Blazor.Components.Pages
